--- a/assets/assets/locales/th.json
+++ b/assets/assets/locales/th.json
@@ -1,5 +1,6 @@
 {
   "app_title": "Ibizza Beach Club",
+  "language_code": "th",
   "search_foods": "ค้นหาอาหาร...",
   "categories": "หมวดหมู่",
   "view_all": "ดูทั้งหมด",
@@ -8,12 +9,14 @@
   "cold_cuts": "เนื้อเย็น",
   "salads": "สลัด",
   "pizza": "พิซซ่า",
-  "paellas": "ข้าวผัดสเปน",
+  "paellas": "ปาเอย่า",
   "meat": "เนื้อสัตว์",
   "happy_ending": "จบอย่างมีความสุข",
   "cart": "ตะกร้าสินค้า",
   "settings": "การตั้งค่า",
-  "home": "หน้าหลัก",
+  "home": "หน้าแรก",
+  "theme_settings": "การตั้งค่าธีม",
+  "select_theme": "เลือกธีม",
   "toggle_theme": "สลับธีม",
   "dark_mode": "โหมดมืด",
   "light_mode": "โหมดสว่าง",
@@ -21,9 +24,10 @@
   "switch_theme": "เปลี่ยนธีม",
   "select_language": "เลือกภาษา",
   "current_language": "ภาษาปัจจุบัน",
+  "language_settings": "การตั้งค่าภาษา",
   "change_language": "เปลี่ยนภาษา",
   "add_to_cart": "เพิ่มลงตะกร้า",
-  "include": "รวม",
+  "include": "รวมถึง",
   "more_for_you": "เพิ่มเติมสำหรับคุณ",
   "total": "รวมทั้งหมด",
   "price": "ราคา",
