--- a/assets/assets/locales/es.json
+++ b/assets/assets/locales/es.json
@@ -1,6 +1,7 @@
 {
   "app_title": "Ibizza Beach Club",
-  "search_foods": "Buscar comida...",
+  "language_code": "es",
+  "search_foods": "Buscar alimentos...",
   "categories": "Categorías",
   "view_all": "Ver todo",
   "most_popular": "Más popular",
@@ -12,18 +13,21 @@
   "meat": "Carne",
   "happy_ending": "Final feliz",
   "cart": "Carrito",
-  "settings": "Configuración",
+  "settings": "Configuraciones",
   "home": "Inicio",
+  "theme_settings": "Configuración de tema",
+  "select_theme": "Seleccionar tema",
   "toggle_theme": "Cambiar tema",
   "dark_mode": "Modo oscuro",
   "light_mode": "Modo claro",
   "follow_system": "Seguir sistema",
-  "switch_theme": "Alternar tema",
+  "switch_theme": "Cambiar tema",
   "select_language": "Seleccionar idioma",
   "current_language": "Idioma actual",
+  "language_settings": "Configuración de idioma",
   "change_language": "Cambiar idioma",
   "add_to_cart": "Añadir al carrito",
-  "include": "Incluir",
+  "include": "Incluye",
   "more_for_you": "Más para ti",
   "total": "Total",
   "price": "Precio",
