--- a/assets/assets/locales/my.json
+++ b/assets/assets/locales/my.json
@@ -1,33 +1,37 @@
 {
-  "app_title": "Ibizza Beach Club",
-  "search_foods": "အစားအစာများရှာဖွေ...",
+  "app_title": "အိုင်ဘီဇာ ဘီချ် ကလပ်",
+  "language_code": "my",
+  "search_foods": "အစားအစာများကို ရှာဖွေပါ...",
   "categories": "အမျိုးအစားများ",
   "view_all": "အားလုံးကြည့်ရန်",
   "most_popular": "လူကြိုက်အများဆုံး",
-  "tapas": "တာပါစ်",
-  "cold_cuts": "အအေးခံအသားများ",
+  "tapas": "တာပတ်",
+  "cold_cuts": "အေးခဲထားသော အသားများ",
   "salads": "သုပ်များ",
   "pizza": "ပီဇာ",
-  "paellas": "ပိုင်းလတ်",
+  "paellas": "ပိုင်လား",
   "meat": "အသား",
   "happy_ending": "ပျော်ရွှင်ဖွယ်အဆုံး",
-  "cart": "ဈေးဝယ်တွန်းလှည်း",
+  "cart": "တွန်းလှည်း",
   "settings": "ဆက်တင်များ",
   "home": "ပင်မစာမျက်နှာ",
-  "toggle_theme": "အပြင်အဆင်ပြောင်းရန်",
+  "theme_settings": "အပြင်အဆင် ဆက်တင်",
+  "select_theme": "အပြင်အဆင် ရွေးချယ်ပါ",
+  "toggle_theme": "အပြင်အဆင် ပြောင်းပါ",
   "dark_mode": "အမှောင်မုဒ်",
   "light_mode": "အလင်းမုဒ်",
-  "follow_system": "စနစ်နောက်လိုက်ရန်",
-  "switch_theme": "အပြင်အဆင်ပြောင်းရန်",
-  "select_language": "ဘာသာစကားရွေးချယ်ရန်",
+  "follow_system": "စနစ်အတိုင်းလိုက်ပါ",
+  "switch_theme": "အပြင်အဆင် ပြောင်းလဲပါ",
+  "select_language": "ဘာသာစကား ရွေးချယ်ပါ",
   "current_language": "လက်ရှိဘာသာစကား",
-  "change_language": "ဘာသာစကားပြောင်းရန်",
-  "add_to_cart": "ဈေးဝယ်တွန်းလှည်းထဲထည့်ရန်",
-  "include": "ထည့်သွင်းရန်",
-  "more_for_you": "သင့်အတွက်နောက်ထပ်",
+  "language_settings": "ဘာသာစကား ဆက်တင်",
+  "change_language": "ဘာသာစကား ပြောင်းလဲပါ",
+  "add_to_cart": "ထည့်ပါ",
+  "include": "ပါဝင်သည်",
+  "more_for_you": "သင့်အတွက် နောက်ထပ်",
   "total": "စုစုပေါင်း",
-  "price": "စျေးနှုန်း",
-  "your_cart": "သင်၏ဈေးဝယ်တွန်းလှည်း",
-  "your_cart_is_empty": "သင်၏ဈေးဝယ်တွန်းလှည်းဗလာဖြစ်နေသည်",
-  "add_some": "အရသာရှိသောပစ္စည်းများထည့်ပြီးစတင်ပါ!"
+  "priceBridport: price": "စျေးနှုန်း",
+  "your_cart": "သင်၏ စျေးဝယ်တွန်းလှည်း",
+  "your_cart_is_empty": "သင်၏ စျေးဝယ်တွန်းလှည်းသည် ဗလာဖြစ်နေသည်",
+  "add_some": "အရသာရှိသော ပစ္စည်းအချို့ကို စတင်ထည့်ပါ!"
 }
